--- a/public/offers.html
+++ b/public/offers.html
@@ -4,47 +4,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Curated Selections - NextGen E-commerce</title>
-  <!-- External CSS -->
   <link rel="stylesheet" href="style.css" />
-  <!-- Font Awesome for Icons -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
-    /* Reset & Base */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      font-family: "Roboto", sans-serif;
-      background: #f0f2f5;
-      color: #444;
-    }
-    main {
-      max-width: 1200px;
-      margin: 0 auto 80px;
-      padding: 20px;
-    }
-    /* HERO SECTION: Updated Background, Prominent Text, and Full-Width */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: "Roboto", sans-serif; background: #f0f2f5; color: #444; }
+    main { max-width: 1200px; margin: 0 auto 80px; padding: 20px; }
     .hero {
       position: relative;
-      min-height: 40vh; /* Reduced minimum height */
-      padding-top: 60px; /* Prevents overflow */
+      min-height: 40vh;
+      padding-top: 60px;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
       color: #fff;
-      /* Use the specified background image with fallback color */
       background: url("https://i.imgur.com/CE6ldMv.jpeg") no-repeat center center/cover, #2575fc;
-      /* Force hero section to span the full viewport width */
       width: 100vw;
       margin-left: calc(50% - 50vw);
     }
-    /* Semi-transparent overlay to enhance text contrast */
     .hero .content {
       position: relative;
       z-index: 1;
@@ -52,51 +30,13 @@
       background: rgba(0, 0, 0, 0.5);
       border-radius: 8px;
     }
-    .hero h1 {
-      font-size: 2.8rem;
-      margin-bottom: 10px;
-      font-weight: 700;
-      color: #fff;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
-    }
-    .hero p {
-      font-size: 1.1rem;
-      max-width: 800px;
-      margin: 0 auto 20px;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
-    }
-    .hero .btn {
-      margin-top: 20px;
-      padding: 14px 35px;
-      font-size: 1rem;
-      background: #1f5bb5;
-      border: none;
-      border-radius: 50px;
-      color: #fff;
-      cursor: pointer;
-      transition: background 0.3s, transform 0.3s;
-    }
-    .hero .btn:hover {
-      background: #2575fc;
-      transform: scale(1.05);
-    }
-    /* OFFERS GRID SECTION */
-    .offers-section {
-      margin-top: 40px;
-    }
-    .offers-section h2 {
-      text-align: center;
-      font-size: 2.5rem;
-      color: #2575fc;
-      margin-bottom: 30px;
-    }
-    .offers-grid {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-      padding: 20px; /* Added padding for spacing */
-    }
+    .hero h1 { font-size: 2.8rem; margin-bottom: 10px; font-weight: 700; color: #fff; text-shadow: 2px 2px 4px rgba(0,0,0,0.7); }
+    .hero p { font-size: 1.1rem; max-width: 800px; margin: 0 auto 20px; text-shadow: 1px 1px 3px rgba(0,0,0,0.7); }
+    .hero .btn { margin-top: 20px; padding: 14px 35px; font-size: 1rem; background: #1f5bb5; border: none; border-radius: 50px; color: #fff; cursor: pointer; transition: background 0.3s, transform 0.3s; }
+    .hero .btn:hover { background: #2575fc; transform: scale(1.05); }
+    .offers-section { margin-top: 40px; }
+    .offers-section h2 { text-align: center; font-size: 2.5rem; color: #2575fc; margin-bottom: 30px; }
+    .offers-grid { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; padding: 20px; }
     .offer-card {
       background: #fff;
       width: 300px;
@@ -104,174 +44,91 @@
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s, box-shadow 0.3s;
       cursor: pointer;
-      padding: 20px; /* Inner padding */
+      padding: 20px;
       text-align: center;
     }
-    .offer-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
-    }
-    .offer-icon {
-      font-size: 3rem;
-      color: #2575fc;
-      margin-bottom: 10px;
-    }
-    .offer-content h3 {
-      font-size: 1.6rem;
-      margin-bottom: 10px;
-      color: #333;
-    }
-    .offer-content p {
-      font-size: 1rem;
-      color: #666;
-      line-height: 1.5;
-    }
-    .dummy-note {
-      text-align: center;
-      font-size: 0.85rem;
-      color: #888;
-      margin-top: 40px;
-      padding: 0 20px;
-    }
-    /* Responsive Adjustments */
+    .offer-card:hover { transform: translateY(-5px); box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15); }
+    .offer-icon { font-size: 3rem; color: #2575fc; margin-bottom: 10px; }
+    .offer-content h3 { font-size: 1.6rem; margin-bottom: 10px; color: #333; }
+    .offer-content p { font-size: 1rem; color: #666; line-height: 1.5; }
+    .dummy-note { text-align: center; font-size: 0.85rem; color: #888; margin-top: 40px; padding: 0 20px; }
     @media (max-width: 768px) {
-      .offers-grid {
-        flex-direction: column;
-        align-items: center;
-      }
-      .offer-card {
-        width: 90%;
-      }
-      .hero {
-        min-height: 40vh;
-      }
-      .hero h1 {
-        font-size: 2.2rem;
-      }
+      .offers-grid { flex-direction: column; align-items: center; }
+      .offer-card { width: 90%; }
+      .hero { min-height: 40vh; }
+      .hero h1 { font-size: 2.2rem; }
     }
   </style>
 </head>
 <body>
-  <!-- Load External Header -->
   <div id="header-placeholder"></div>
   <script>
     function loadHTML(url, containerId, callback) {
       fetch(url)
         .then(response => response.text())
-        .then(html => {
-          document.getElementById(containerId).innerHTML = html;
-          const scripts = document.getElementById(containerId).querySelectorAll("script");
-          scripts.forEach(oldScript => {
-            const newScript = document.createElement("script");
-            if (oldScript.src) {
-              newScript.src = oldScript.src;
-            } else {
-              newScript.textContent = oldScript.textContent;
-            }
-            document.head.appendChild(newScript);
-          });
-          if (callback) callback();
-        })
+        .then(html => { document.getElementById(containerId).innerHTML = html; if(callback) callback(); })
         .catch(err => console.error("Error loading " + url, err));
     }
     loadHTML("header.html", "header-placeholder");
   </script>
-
   <main>
-    <!-- HERO SECTION -->
     <section class="hero">
       <div class="content">
-        <h1>Curated Selections</h1>
-        <p>
-          Discover exclusive offers and hand-picked deals from our vast collection. Elevate your shopping experience with NextGen E-commerce.
-        </p>
-        <button class="btn" onclick="window.location.href='ecommerce.html'">Shop Now</button>
+        <h1 id="offersHeroTitle">Curated Selections</h1>
+        <p id="offersHeroDesc">Discover exclusive offers and hand-picked deals from our vast collection.</p>
+        <button class="btn" onclick="window.location.href='ecommerce.html'" id="offersCTA">Shop Now</button>
       </div>
     </section>
-
-    <!-- OFFERS GRID SECTION -->
     <section class="offers-section">
-      <h2>Featured Offers</h2>
+      <h2>Our Exclusive Offers</h2>
       <div class="offers-grid" id="offersGrid">
-        <!-- Offer cards will be inserted here dynamically -->
+        <!-- Dynamic offer cards will be loaded here -->
       </div>
+      <div class="dummy-note">Note: Offers are updated regularly.</div>
     </section>
-
-    <!-- DUMMY DATA NOTE -->
-    <div class="dummy-note">
-      <p>
-        This page is integrated with our main E-commerce platform. Click on any offer to jump directly to the detailed section on our main site.
-      </p>
-    </div>
   </main>
-
-  <!-- Load External Footer -->
   <div id="footer-placeholder"></div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyBq9eDQru5rMMXZjQ4RYHcKSGkcgnnDJFw",
+      authDomain: "e-commerce-pk.firebaseapp.com",
+      projectId: "e-commerce-pk",
+      storageBucket: "e-commerce-pk.firebasestorage.app",
+      messagingSenderId: "126517093225",
+      appId: "1:126517093225:web:c2352620c6d32c582513f8",
+      measurementId: "G-2G2DNCNNT3"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+    db.collection("pages").doc("offers").get().then(doc => {
+      if(doc.exists) {
+        const data = doc.data();
+        if(data.pageTitle) document.getElementById("offersHeroTitle").innerText = data.pageTitle;
+        if(data.description) document.getElementById("offersHeroDesc").innerText = data.description;
+        if(data.CTA) document.getElementById("offersCTA").innerText = data.CTA;
+        if(data.offersItems && Array.isArray(data.offersItems)) {
+          let gridHtml = "";
+          data.offersItems.forEach(item => {
+            gridHtml += `
+              <div class="offer-card">
+                <i class="${item.icon} offer-icon"></i>
+                <div class="offer-content">
+                  <h3>${item.title}</h3>
+                  <p>${item.desc}</p>
+                </div>
+              </div>
+            `;
+          });
+          document.getElementById("offersGrid").innerHTML = gridHtml;
+        }
+      }
+    }).catch(err => console.error("Error loading offers data:", err));
+  </script>
   <script>
     loadHTML("footer.html", "footer-placeholder");
-  </script>
-
-  <!-- DYNAMIC OFFERS SCRIPT -->
-  <script>
-    const offerIcons = {
-      "Countdown Sales": "fas fa-hourglass-half",
-      "Discount Offers": "fas fa-percent",
-      "Hot Sales": "fas fa-fire",
-      "Seasonal Offers": "fas fa-leaf",
-      "Clearance Sale": "fas fa-tags"
-    };
-    const offers = [
-      {
-        title: "Countdown Sales",
-        description: "Limited time deals on top products. Hurry before they're gone!",
-        query: "Countdown,Sales"
-      },
-      {
-        title: "Discount Offers",
-        description: "Unbeatable discounts on your favorite items.",
-        query: "Discount,Offers"
-      },
-      {
-        title: "Hot Sales",
-        description: "Trending products at irresistible prices.",
-        query: "Hot,Sales"
-      },
-      {
-        title: "Seasonal Offers",
-        description: "Season-specific collections curated for you.",
-        query: "Seasonal,Offers"
-      },
-      {
-        title: "Clearance Sale",
-        description: "Last chance deals on clearance items.",
-        query: "Clearance,Sale"
-      }
-    ];
-    const offersGrid = document.getElementById("offersGrid");
-    offers.forEach((offer) => {
-      const card = document.createElement("div");
-      card.className = "offer-card";
-      card.onclick = () => {
-        const sectionId = "section-" + offer.title.replace(/\s/g, "");
-        window.location.href = "ecommerce.html#" + sectionId;
-      };
-      const iconDiv = document.createElement("div");
-      iconDiv.className = "offer-icon";
-      const iconElement = document.createElement("i");
-      iconElement.className = offerIcons[offer.title] || "fas fa-star";
-      iconDiv.appendChild(iconElement);
-      const contentDiv = document.createElement("div");
-      contentDiv.className = "offer-content";
-      const title = document.createElement("h3");
-      title.textContent = offer.title;
-      const desc = document.createElement("p");
-      desc.textContent = offer.description;
-      contentDiv.appendChild(title);
-      contentDiv.appendChild(desc);
-      card.appendChild(iconDiv);
-      card.appendChild(contentDiv);
-      offersGrid.appendChild(card);
-    });
   </script>
 </body>
 </html>
