--- a/public/details.html
+++ b/public/details.html
@@ -4,180 +4,66 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Product Details - NextGen E-commerce</title>
-    <!-- Font Awesome for icons -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-    <!-- Bootstrap 5 CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    />
-    <!-- Global Styles -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
-    <!-- Custom JavaScript -->
-    <script src="script.js" defer></script>
     <style>
-      /* Overall layout unchanged */
-      body {
-        margin-top: 70px;
-        scroll-behavior: smooth;
-      }
-      .section-nav {
-        background: #fff;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        position: sticky;
-        top: 0;
-        z-index: 999;
-      }
-      .section-nav .nav-link {
-        color: #007bff;
-        font-weight: bold;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 10px 0;
-      }
-      .section-nav .nav-link i {
-        font-size: 1.5rem;
-        margin-bottom: 5px;
-      }
-      .section-nav .nav-link:hover {
-        color: #0056b3;
-      }
-      .description-content {
-        max-height: 150px;
-        overflow: hidden;
-        transition: max-height 0.4s ease;
-      }
-      .description-content.expanded {
-        max-height: 1000px;
-      }
-
-      /* Reviews styling as per Play Store – no box borders, 3-review limit, etc. */
-      .review-item {
-        margin-bottom: 1rem;
-        border-bottom: 1px solid #ddd;
-        padding-bottom: 1rem;
-      }
-      .review-user {
-        font-weight: 600;
-        margin-right: 8px;
-      }
-      .review-date {
-        color: #666;
-        font-size: 0.85rem;
-      }
-      .review-text {
-        white-space: pre-line;
-        margin-bottom: 0.5rem;
-      }
-      .review-full {
-        display: none;
-      }
-      .review-full.expanded {
-        display: block;
-      }
-      .review-read-more {
-        color: #007bff;
-        cursor: pointer;
-        font-size: 0.9rem;
-      }
-      /* "Was this review helpful?" with small, neat buttons (straight corners) */
-      .review-helpful {
-        margin-top: 0.5rem;
-        font-size: 0.85rem;
-        color: #666;
-      }
-      .helpful-btn {
-        border: 1px solid #c0c0c0;
-        background: #fff;
-        border-radius: 0; /* straight corners */
-        padding: 2px 8px;
-        margin-left: 8px;
-        color: #202124;
-        font-size: 0.8rem;
-        cursor: pointer;
-      }
-      .helpful-btn:hover {
-        background-color: #f1f3f4;
-      }
-
-      /* Rating stars for "Write a Review" – small and neat */
-      #ratingStars .star-icon {
-        font-size: 16px;
-        margin-right: 4px;
-        cursor: pointer;
-        color: #ccc;
-      }
-      #ratingStars .star-icon.selected {
-        color: #f5c518;
-      }
+      body { margin-top: 70px; scroll-behavior: smooth; }
+      .section-nav { background: #fff; box-shadow: 0 2px 4px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 999; }
+      .section-nav .nav-link { color: #007bff; font-weight: bold; display: flex; flex-direction: column; align-items: center; padding: 10px 0; }
+      .section-nav .nav-link i { font-size: 1.5rem; margin-bottom: 5px; }
+      .section-nav .nav-link:hover { color: #0056b3; }
+      .description-content { max-height: 150px; overflow: hidden; transition: max-height 0.4s ease; }
+      .description-content.expanded { max-height: 1000px; }
+      .review-item { margin-bottom: 1rem; border-bottom: 1px solid #ddd; padding-bottom: 1rem; }
+      .review-user { font-weight: 600; margin-right: 8px; }
+      .review-date { color: #666; font-size: 0.85rem; }
+      .review-text { white-space: pre-line; margin-bottom: 0.5rem; }
+      .review-full { display: none; }
+      .review-full.expanded { display: block; }
+      .review-read-more { color: #007bff; cursor: pointer; font-size: 0.9rem; }
+      .review-helpful { margin-top: 0.5rem; font-size: 0.85rem; color: #666; }
+      .helpful-btn { border: 1px solid #c0c0c0; background: #fff; border-radius: 0; padding: 2px 8px; margin-left: 8px; color: #202124; font-size: 0.8rem; cursor: pointer; }
+      .helpful-btn:hover { background-color: #f1f3f4; }
+      #ratingStars .star-icon { font-size: 16px; margin-right: 4px; cursor: pointer; color: #ccc; }
+      #ratingStars .star-icon.selected { color: #f5c518; }
     </style>
   </head>
   <body>
-    <!-- External Header will be loaded here -->
     <div id="header-placeholder"></div>
-
-    <!-- Product Details Section -->
     <div class="container mt-5 mb-5">
       <div class="row">
-        <!-- Product Image -->
         <div class="col-md-5 text-center mb-3">
           <img id="productImage" src="https://via.placeholder.com/400x300?text=Product+Image" alt="Product Image" class="img-fluid rounded" />
         </div>
-        <!-- Product Info -->
         <div class="col-md-7">
           <h2 id="productName">Product Name</h2>
           <p class="h5 text-primary" id="productPrice">PKR 0</p>
           <div id="productRating" class="star-rating mb-2"></div>
           <p id="productStats" class="text-muted mb-3">0 Added | 0 Sold</p>
-          <button class="btn btn-success add-to-cart-btn mt-3">
-            <i class="fa fa-shopping-cart"></i> Add to Cart
-          </button>
+          <button class="btn btn-success add-to-cart-btn mt-3"><i class="fa fa-shopping-cart"></i> Add to Cart</button>
         </div>
       </div>
     </div>
-
-    <!-- Section Navigation Bar -->
     <nav class="section-nav">
       <div class="container d-flex justify-content-around">
-        <a class="nav-link" href="#section-description">
-          <i class="fa fa-file-text"></i>
-          <span>Description</span>
-        </a>
-        <a class="nav-link" href="#section-reviews">
-          <i class="fa fa-comments"></i>
-          <span>Reviews</span>
-        </a>
-        <a class="nav-link" href="#section-related">
-          <i class="fa fa-th"></i>
-          <span>Related Items</span>
-        </a>
+        <a class="nav-link" href="#section-description"><i class="fa fa-file-text"></i><span>Description</span></a>
+        <a class="nav-link" href="#section-reviews"><i class="fa fa-comments"></i><span>Reviews</span></a>
+        <a class="nav-link" href="#section-related"><i class="fa fa-th"></i><span>Related Items</span></a>
       </div>
     </nav>
-
-    <!-- Description Section -->
     <section id="section-description" class="container mt-4 mb-5">
       <h3>Description</h3>
       <div class="description-content" id="descriptionContent">
-        <p id="productDescription">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel mauris quam. Praesent sed nisi eleifend, varius nulla eu, auctor urna. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse potenti. Proin ut tincidunt mauris, vel dapibus nulla. Nulla facilisi. Sed nec nulla vitae eros aliquet fermentum.
-        </p>
+        <p id="productDescription">Default product description.</p>
       </div>
       <button class="btn btn-sm btn-outline-primary mt-2" id="descReadMore">Read More</button>
     </section>
-
-    <!-- Reviews Section -->
     <section id="section-reviews" class="container mb-5">
       <h3>Reviews</h3>
-      <div id="reviewsContainer"></div>
-      <div id="seeAllReviewsLink" class="text-primary mt-2" style="cursor: pointer; display: none;">
-        See all reviews
+      <div id="reviewsContainer">
+        <!-- Reviews will be loaded here -->
       </div>
-
-      <!-- Write a Review -->
+      <div id="seeAllReviewsLink" class="text-primary mt-2" style="cursor: pointer; display: none;">See all reviews</div>
       <div class="mt-4 p-3" style="border:1px solid #ddd; border-radius:5px;">
         <h5>Write a Review</h5>
         <div id="ratingStars" class="mb-2">
@@ -191,229 +77,66 @@
         <button class="btn btn-success">Submit Review</button>
       </div>
     </section>
-
-    <!-- Related Items Section -->
     <section id="section-related" class="container mb-5">
       <h3>Related Items</h3>
       <div class="row" id="relatedItemsContainer">
         <div class="col-6 col-md-3 mb-3">
           <div class="card text-center">
             <img src="https://via.placeholder.com/140x100?text=Item+1" alt="Item 1" class="card-img-top" />
-            <div class="card-body p-2">
-              <p class="small mb-0">Item 1</p>
-            </div>
+            <div class="card-body p-2"><p class="small mb-0">Item 1</p></div>
           </div>
         </div>
         <div class="col-6 col-md-3 mb-3">
           <div class="card text-center">
             <img src="https://via.placeholder.com/140x100?text=Item+2" alt="Item 2" class="card-img-top" />
-            <div class="card-body p-2">
-              <p class="small mb-0">Item 2</p>
-            </div>
+            <div class="card-body p-2"><p class="small mb-0">Item 2</p></div>
           </div>
         </div>
         <div class="col-6 col-md-3 mb-3">
           <div class="card text-center">
             <img src="https://via.placeholder.com/140x100?text=Item+3" alt="Item 3" class="card-img-top" />
-            <div class="card-body p-2">
-              <p class="small mb-0">Item 3</p>
-            </div>
+            <div class="card-body p-2"><p class="small mb-0">Item 3</p></div>
           </div>
         </div>
         <div class="col-6 col-md-3 mb-3">
           <div class="card text-center">
             <img src="https://via.placeholder.com/140x100?text=Item+4" alt="Item 4" class="card-img-top" />
-            <div class="card-body p-2">
-              <p class="small mb-0">Item 4</p>
-            </div>
+            <div class="card-body p-2"><p class="small mb-0">Item 4</p></div>
           </div>
         </div>
       </div>
     </section>
-
-    <!-- External Footer will be loaded here -->
     <div id="footer-placeholder"></div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
     <script>
-      // ==============================
-      // 1. PRODUCT DETAILS (unchanged)
-      // ==============================
-      const storedProduct = JSON.parse(localStorage.getItem("selectedProduct"));
-      const defaultProduct = {
-        id: "sample-product",
-        name: "Sample Product",
-        price: 29.99,
-        description: "This is a sample product for demonstration purposes.",
-        image: "https://via.placeholder.com/400x300?text=Product+Image",
-        rating: 4,
-        added: 10,
-        sold: 5,
-        quantity: 1
+      const firebaseConfig = {
+        apiKey: "AIzaSyBq9eDQru5rMMXZjQ4RYHcKSGkcgnnDJFw",
+        authDomain: "e-commerce-pk.firebaseapp.com",
+        projectId: "e-commerce-pk",
+        storageBucket: "e-commerce-pk.firebasestorage.app",
+        messagingSenderId: "126517093225",
+        appId: "1:126517093225:web:c2352620c6d32c582513f8",
+        measurementId: "G-2G2DNCNNT3"
       };
-      const product = storedProduct || defaultProduct;
-      if (!product.id) {
-        product.id = product.name.replace(/\s+/g, "-").toLowerCase();
-      }
-      product.price = parseFloat(product.price.toString().replace(/[^\d.-]/g, "")) || defaultProduct.price;
-
-      document.getElementById("productName").innerText = product.name;
-      document.getElementById("productPrice").innerText = "PKR " + product.price;
-      document.getElementById("productDescription").innerText = product.description;
-      document.getElementById("productImage").src = product.image;
-      document.getElementById("productStats").innerText = product.added + " Added | " + product.sold + " Sold";
-      document.getElementById("productRating").innerHTML = generateStars(product.rating);
-
-      function generateStars(rating) {
-        let html = "";
-        const fullStars = Math.floor(rating);
-        const halfStar = rating - fullStars >= 0.5 ? 1 : 0;
-        for (let i = 0; i < fullStars; i++) {
-          html += '<i class="fa fa-star text-warning"></i>';
+      firebase.initializeApp(firebaseConfig);
+      const db = firebase.firestore();
+      db.collection("pages").doc("details").get().then(doc => {
+        if(doc.exists) {
+          const data = doc.data();
+          if(data.productName) document.getElementById("productName").innerText = data.productName;
+          if(data.productPrice) document.getElementById("productPrice").innerText = data.productPrice;
+          if(data.productStats) document.getElementById("productStats").innerText = data.productStats;
+          if(data.productDescription) document.getElementById("productDescription").innerText = data.productDescription;
+          if(data.productImage) document.getElementById("productImage").src = data.productImage;
         }
-        if (halfStar) {
-          html += '<i class="fa fa-star-half-alt text-warning"></i>';
-        }
-        return html;
-      }
-
-      // Description "Read More"
-      const descReadMoreBtn = document.getElementById("descReadMore");
-      const descContent = document.getElementById("descriptionContent");
-      descReadMoreBtn.addEventListener("click", function () {
-        descContent.classList.toggle("expanded");
-        this.textContent = descContent.classList.contains("expanded")
-          ? "Show Less"
-          : "Read More";
-      });
-
-      // ==============================
-      // 2. REVIEWS DATA & RENDERING
-      // ==============================
-      const reviewsData = [
-        {
-          user: "User1",
-          rating: 5,
-          date: "July 10, 2025",
-          text: "Amazing quality, highly recommended! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-        },
-        {
-          user: "User2",
-          rating: 4,
-          date: "July 8, 2025",
-          text: "Good value for money. Additional details about the product experience go here. Pellentesque habitant morbi tristique senectus et netus et malesuada."
-        },
-        {
-          user: "User3",
-          rating: 3,
-          date: "July 5, 2025",
-          text: "It's okay, not the best but decent. Some more lines of text to test read more. Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-        },
-        {
-          user: "User4",
-          rating: 5,
-          date: "July 2, 2025",
-          text: "Absolutely love it! This is a longer review to demonstrate read more functionality. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor."
-        }
-      ];
-
-      const reviewsContainer = document.getElementById("reviewsContainer");
-      const seeAllReviewsLink = document.getElementById("seeAllReviewsLink");
-      let showAllReviews = false;
-      function renderReviews() {
-        reviewsContainer.innerHTML = "";
-        const limit = 3;
-        const toShow = showAllReviews ? reviewsData : reviewsData.slice(0, limit);
-        toShow.forEach((rev) => {
-          const reviewDiv = document.createElement("div");
-          reviewDiv.className = "review-item";
-
-          const headerDiv = document.createElement("div");
-          headerDiv.innerHTML = `
-            <span class="review-user">${rev.user}</span>
-            <span class="review-date"> • ${rev.date}</span>
-            <div class="small" style="margin: 4px 0;">
-              ${generateStars(rev.rating)}
-            </div>
-          `;
-          reviewDiv.appendChild(headerDiv);
-
-          const textP = document.createElement("p");
-          textP.className = "review-text";
-          textP.innerHTML = `
-            <span class="review-snippet">${rev.text.substring(0, 100)}</span>
-            ${rev.text.length > 100 ? `<span class="review-read-more">...Read more</span>` : ""}
-          `;
-          reviewDiv.appendChild(textP);
-
-          if (rev.text.length > 100) {
-            const fullTextP = document.createElement("p");
-            fullTextP.className = "review-full";
-            fullTextP.textContent = rev.text;
-            reviewDiv.appendChild(fullTextP);
-          }
-
-          const helpfulDiv = document.createElement("div");
-          helpfulDiv.className = "review-helpful";
-          helpfulDiv.innerHTML = `
-            Was this review helpful?
-            <button class="helpful-btn">Yes</button>
-            <button class="helpful-btn">No</button>
-          `;
-          reviewDiv.appendChild(helpfulDiv);
-
-          reviewsContainer.appendChild(reviewDiv);
-        });
-        seeAllReviewsLink.style.display = (reviewsData.length > limit && !showAllReviews) ? "block" : "none";
-      }
-
-      seeAllReviewsLink.addEventListener("click", () => {
-        showAllReviews = true;
-        renderReviews();
-      });
-
-      document.addEventListener("click", function (e) {
-        if (e.target && e.target.classList.contains("review-read-more")) {
-          const parent = e.target.closest(".review-item");
-          const fullReview = parent.querySelector(".review-full");
-          if (fullReview) {
-            fullReview.classList.toggle("expanded");
-            e.target.textContent = fullReview.classList.contains("expanded") ? " Show less" : "...Read more";
-          }
-        }
-      });
-
-      renderReviews();
-
-      // ==============================
-      // 3. STAR RATING (WRITE A REVIEW)
-      // ==============================
-      const starIcons = document.querySelectorAll("#ratingStars .star-icon");
-      starIcons.forEach((star) => {
-        star.addEventListener("click", function () {
-          const rating = this.getAttribute("data-value");
-          starIcons.forEach((s) => {
-            s.getAttribute("data-value") <= rating ? s.classList.add("selected") : s.classList.remove("selected");
-          });
-        });
-      });
-
-      // ==============================
-      // 4. ADD TO CART
-      // ==============================
-      document.querySelector(".add-to-cart-btn").addEventListener("click", function () {
-        let cartItems = JSON.parse(localStorage.getItem("cartItems")) || [];
-        let productToAdd = { ...product };
-        productToAdd.price = parseFloat(productToAdd.price.toString().replace(/[^\d.-]/g, "")) || productToAdd.price;
-        const existingIndex = cartItems.findIndex((item) => item.id === productToAdd.id);
-        if (existingIndex > -1) {
-          cartItems[existingIndex].quantity += 1;
-        } else {
-          productToAdd.quantity = 1;
-          cartItems.push(productToAdd);
-        }
-        localStorage.setItem("cartItems", JSON.stringify(cartItems));
-        alert("Product added to cart!");
+      }).catch(err => console.error("Error loading product details data:", err));
+    </script>
+    <script>
+      document.getElementById("descReadMore").addEventListener("click", function() {
+        const desc = document.getElementById("descriptionContent");
+        desc.classList.toggle("expanded");
       });
     </script>
   </body>
