--- a/public/ecommerce.html
+++ b/public/ecommerce.html
@@ -1,73 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NextGen E-commerce - Shop Now</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <style>
-      body { font-family: 'Roboto', sans-serif; background-color: #f3f4f6; color: #2d3748; }
-      main { padding-bottom: 100px; }
-      .hero {
-        position: relative;
-        min-height: 500px;
-        background: url("https://i.imgur.com/OgzOGSK.jpg") no-repeat center center/cover,
-                    linear-gradient(135deg, #2a2a72, #009ffd);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-      }
-      .hero-content { position: relative; z-index: 2; padding: 0 20px; }
-      .hero-content h1 { font-size: 3rem; font-weight: bold; margin-bottom: 1rem; color: #fff; }
-      .hero-content p { font-size: 1.2rem; margin-bottom: 1.5rem; color: #fff; }
-      .hero-content .btn { font-size: 1.1rem; padding: 0.75rem 1.5rem; background-color: #ff9900; border: none; border-radius: 4px; color: #fff; transition: background 0.3s, transform 0.3s; }
-      .hero-content .btn:hover { background-color: #e68a00; transform: scale(1.05); }
-    </style>
-  </head>
-  <body>
-    <div id="header-placeholder"></div>
-    <main>
-      <section class="hero">
-        <div class="hero-content">
-          <h1 id="ecomHeroTitle">Welcome to NextGen E-commerce</h1>
-          <p id="ecomHeroDesc">Your one‑stop shop for the latest trends &amp; exclusive deals.</p>
-          <a href="#categoriesContainer" class="btn" id="ecomCTA">Shop Now</a>
-        </div>
-      </section>
-      <div class="container my-4" id="mainPage">
-        <h1 class="mb-4 text-center">Product Categories</h1>
-        <div id="categoriesContainer">
-          <!-- Dynamic category sections will be rendered here -->
-        </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>E-commerce - MyBusiness Premium</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    /* Basic styles for E-commerce page */
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+    header, footer { background: #333; color: #fff; padding: 10px; text-align: center; }
+    main { padding: 20px; }
+    .hero { position: relative; height: 50vh; overflow: hidden; }
+    .hero video, .hero img { width: 100%; height: 100%; object-fit: cover; }
+    .hero-content { position: absolute; top: 20%; left: 50%; transform: translateX(-50%); color: #fff; text-align: center; }
+    .carousel, .offers { margin-top: 20px; }
+  </style>
+</head>
+<body>
+  <header id="siteHeader">MyBusiness Premium</header>
+  <main>
+    <section class="hero">
+      <video id="ecomHeroMedia" autoplay muted loop playsinline>
+        <source src="default-ecom-video.mp4" type="video/mp4">
+      </video>
+      <div class="hero-content">
+        <h1 id="ecomPageTitleElement">E-commerce Default Title</h1>
+        <p id="ecomHeroSubtitleElement">Default Hero Subtitle for E-commerce.</p>
       </div>
-    </main>
-    <div id="footer-placeholder"></div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-    <script>
-      const firebaseConfig = {
-        apiKey: "AIzaSyBq9eDQru5rMMXZjQ4RYHcKSGkcgnnDJFw",
-        authDomain: "e-commerce-pk.firebaseapp.com",
-        projectId: "e-commerce-pk",
-        storageBucket: "e-commerce-pk.firebasestorage.app",
-        messagingSenderId: "126517093225",
-        appId: "1:126517093225:web:c2352620c6d32c582513f8",
-        measurementId: "G-2G2DNCNNT3"
-      };
-      firebase.initializeApp(firebaseConfig);
-      const db = firebase.firestore();
-      db.collection("pages").doc("ecommerce").get().then(doc => {
-        if(doc.exists) {
-          const data = doc.data();
-          if(data.pageTitle) document.getElementById("ecomHeroTitle").innerText = data.pageTitle;
-          if(data.heroDesc) document.getElementById("ecomHeroDesc").innerText = data.heroDesc;
-          if(data.CTA) document.getElementById("ecomCTA").innerText = data.CTA;
-        }
-      }).catch(err => console.error("Error loading ecommerce data:", err));
-    </script>
-  </body>
+    </section>
+    <section class="carousel" id="carouselSection">
+      <!-- Carousel items will be rendered here dynamically -->
+    </section>
+    <section class="offers" id="offersSection">
+      <!-- Offers items will be rendered here dynamically -->
+    </section>
+  </main>
+  <footer id="siteFooter">© 2025 MyBusiness. All rights reserved.</footer>
+  
+  <!-- Firebase and Firestore -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyBq9eDQru5rMMXZjQ4RYHcKSGkcgnnDJFw",
+      authDomain: "e-commerce-pk.firebaseapp.com",
+      projectId: "e-commerce-pk",
+      storageBucket: "e-commerce-pk.firebasestorage.app",
+      messagingSenderId: "126517093225",
+      appId: "1:126517093225:web:c2352620c6d32c582513f8",
+      measurementId: "G-2G2DNCNNT3"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+    
+    // Listen for E-commerce page updates
+    db.collection("pages").doc("ecommerce").onSnapshot((doc) => {
+      if (doc.exists) {
+        const data = doc.data();
+        document.getElementById("ecomPageTitleElement").innerText = data.pageTitle || "E-commerce Default Title";
+        document.getElementById("ecomHeroSubtitleElement").innerText = data.heroSubtitle || "Default Hero Subtitle for E-commerce.";
+        document.getElementById("ecomHeroMedia").src = data.mediaURL || "default-ecom-video.mp4";
+        // You can also render dynamic lists (carousel, offers, etc.) by iterating over data arrays.
+      }
+    });
+  </script>
+</body>
 </html>
