--- a/public/offers.html
+++ b/public/offers.html
@@ -1,94 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Curated Selections - NextGen E-commerce</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Offers - MyBusiness Premium</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: "Roboto", sans-serif; background: #f0f2f5; color: #444; }
-    main { max-width: 1200px; margin: 0 auto 80px; padding: 20px; }
-    .hero {
-      position: relative;
-      min-height: 40vh;
-      padding-top: 60px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      color: #fff;
-      background: url("https://i.imgur.com/CE6ldMv.jpeg") no-repeat center center/cover, #2575fc;
-      width: 100vw;
-      margin-left: calc(50% - 50vw);
-    }
-    .hero .content {
-      position: relative;
-      z-index: 1;
-      padding: 20px;
-      background: rgba(0, 0, 0, 0.5);
-      border-radius: 8px;
-    }
-    .hero h1 { font-size: 2.8rem; margin-bottom: 10px; font-weight: 700; color: #fff; text-shadow: 2px 2px 4px rgba(0,0,0,0.7); }
-    .hero p { font-size: 1.1rem; max-width: 800px; margin: 0 auto 20px; text-shadow: 1px 1px 3px rgba(0,0,0,0.7); }
-    .hero .btn { margin-top: 20px; padding: 14px 35px; font-size: 1rem; background: #1f5bb5; border: none; border-radius: 50px; color: #fff; cursor: pointer; transition: background 0.3s, transform 0.3s; }
-    .hero .btn:hover { background: #2575fc; transform: scale(1.05); }
-    .offers-section { margin-top: 40px; }
-    .offers-section h2 { text-align: center; font-size: 2.5rem; color: #2575fc; margin-bottom: 30px; }
-    .offers-grid { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; padding: 20px; }
-    .offer-card {
-      background: #fff;
-      width: 300px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s, box-shadow 0.3s;
-      cursor: pointer;
-      padding: 20px;
-      text-align: center;
-    }
-    .offer-card:hover { transform: translateY(-5px); box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15); }
-    .offer-icon { font-size: 3rem; color: #2575fc; margin-bottom: 10px; }
-    .offer-content h3 { font-size: 1.6rem; margin-bottom: 10px; color: #333; }
-    .offer-content p { font-size: 1rem; color: #666; line-height: 1.5; }
-    .dummy-note { text-align: center; font-size: 0.85rem; color: #888; margin-top: 40px; padding: 0 20px; }
-    @media (max-width: 768px) {
-      .offers-grid { flex-direction: column; align-items: center; }
-      .offer-card { width: 90%; }
-      .hero { min-height: 40vh; }
-      .hero h1 { font-size: 2.2rem; }
-    }
+    /* Basic styles for Offers page */
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+    header, footer { background: #333; color: #fff; padding: 10px; text-align: center; }
+    main { padding: 20px; }
+    .hero { position: relative; height: 50vh; overflow: hidden; }
+    .hero video, .hero img { width: 100%; height: 100%; object-fit: cover; }
+    .hero-content { position: absolute; top: 20%; left: 50%; transform: translateX(-50%); color: #fff; text-align: center; }
+    .offers-list { margin-top: 20px; }
   </style>
 </head>
 <body>
-  <div id="header-placeholder"></div>
-  <script>
-    function loadHTML(url, containerId, callback) {
-      fetch(url)
-        .then(response => response.text())
-        .then(html => { document.getElementById(containerId).innerHTML = html; if(callback) callback(); })
-        .catch(err => console.error("Error loading " + url, err));
-    }
-    loadHTML("header.html", "header-placeholder");
-  </script>
+  <header id="siteHeader">MyBusiness Premium</header>
   <main>
     <section class="hero">
-      <div class="content">
-        <h1 id="offersHeroTitle">Curated Selections</h1>
-        <p id="offersHeroDesc">Discover exclusive offers and hand-picked deals from our vast collection.</p>
-        <button class="btn" onclick="window.location.href='ecommerce.html'" id="offersCTA">Shop Now</button>
+      <video id="offersHeroMedia" autoplay muted loop playsinline>
+        <source src="default-offers-video.mp4" type="video/mp4">
+      </video>
+      <div class="hero-content">
+        <h1 id="offersPageTitleElement">Offers Default Title</h1>
       </div>
     </section>
-    <section class="offers-section">
-      <h2>Our Exclusive Offers</h2>
-      <div class="offers-grid" id="offersGrid">
-        <!-- Dynamic offer cards will be loaded here -->
-      </div>
-      <div class="dummy-note">Note: Offers are updated regularly.</div>
+    <section class="offers-list" id="offersListSection">
+      <!-- Offers items will be rendered dynamically -->
     </section>
   </main>
-  <div id="footer-placeholder"></div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <footer id="siteFooter">© 2025 MyBusiness. All rights reserved.</footer>
+  
+  <!-- Firebase and Firestore -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
   <script>
@@ -103,32 +49,25 @@
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
-    db.collection("pages").doc("offers").get().then(doc => {
+    
+    // Listen for Offers page updates
+    db.collection("pages").doc("offers").onSnapshot((doc) => {
       if(doc.exists) {
         const data = doc.data();
-        if(data.pageTitle) document.getElementById("offersHeroTitle").innerText = data.pageTitle;
-        if(data.description) document.getElementById("offersHeroDesc").innerText = data.description;
-        if(data.CTA) document.getElementById("offersCTA").innerText = data.CTA;
-        if(data.offersItems && Array.isArray(data.offersItems)) {
-          let gridHtml = "";
-          data.offersItems.forEach(item => {
-            gridHtml += `
-              <div class="offer-card">
-                <i class="${item.icon} offer-icon"></i>
-                <div class="offer-content">
-                  <h3>${item.title}</h3>
-                  <p>${item.desc}</p>
-                </div>
-              </div>
-            `;
+        document.getElementById("offersPageTitleElement").innerText = data.pageTitle || "Offers Default Title";
+        // Render offers items if available (assuming data.offers is an array)
+        if(data.offers && Array.isArray(data.offers)) {
+          const container = document.getElementById("offersListSection");
+          container.innerHTML = "";
+          data.offers.forEach(item => {
+            const div = document.createElement("div");
+            div.innerHTML = `<h5>${item.offerTitle}</h5><p>${item.offerDesc}</p>`;
+            container.appendChild(div);
           });
-          document.getElementById("offersGrid").innerHTML = gridHtml;
         }
+        document.getElementById("offersHeroMedia").src = data.mediaURL || "default-offers-video.mp4";
       }
-    }).catch(err => console.error("Error loading offers data:", err));
-  </script>
-  <script>
-    loadHTML("footer.html", "footer-placeholder");
+    });
   </script>
 </body>
 </html>
