--- a/public/support.html
+++ b/public/support.html
@@ -1,98 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Support - MyBusiness</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Support - MyBusiness Premium</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Roboto', sans-serif; background: #f7f8fa; color: #333; padding: 70px 10px; }
-    .container { max-width: 1000px; margin: 0 auto; padding: 10px; }
-    h1 { font-size: 1.8rem; margin-bottom: 10px; color: #007bff; text-align: center; }
-    .subtitle { text-align: center; font-size: 1rem; margin-bottom: 30px; color: #555; }
-    .support-options { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; margin-bottom: 40px; }
-    .support-option { background: #fff; border: 1px solid #ddd; border-radius: 6px; padding: 20px; width: 220px; text-align: center; cursor: pointer; transition: box-shadow 0.3s; }
-    .support-option:hover { box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-    .support-option i { font-size: 2rem; color: #007bff; margin-bottom: 10px; }
-    .support-option h3 { font-size: 1.1rem; margin-bottom: 6px; color: #333; }
-    .support-option p { font-size: 0.9rem; color: #666; line-height: 1.4; }
-    .faq-section { margin-bottom: 40px; }
-    .faq-title { font-size: 1.2rem; margin-bottom: 15px; color: #007bff; }
-    .faq-item { background: #fff; border: 1px solid #ddd; border-radius: 6px; margin-bottom: 10px; overflow: hidden; }
-    .faq-question { padding: 15px; cursor: pointer; font-weight: 500; background: #f9f9f9; display: flex; justify-content: space-between; align-items: center; }
-    .faq-answer { display: none; padding: 15px; font-size: 0.9rem; color: #555; line-height: 1.4; }
-    .contact-section { margin-bottom: 40px; }
-    .contact-section h2 { font-size: 1.2rem; margin-bottom: 10px; color: #007bff; }
-    .contact-form { background: #fff; border: 1px solid #ddd; border-radius: 6px; padding: 20px; }
-    .contact-form label { display: block; margin: 8px 0 4px; font-size: 0.9rem; }
-    .contact-form input[type="text"],
-    .contact-form input[type="email"],
-    .contact-form textarea { width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 4px; font-size: 0.9rem; }
-    .contact-form textarea { min-height: 80px; }
-    .contact-form button { margin-top: 15px; background: #007bff; color: #fff; border: none; padding: 10px 16px; font-size: 1rem; border-radius: 4px; cursor: pointer; }
-    .contact-form button:hover { background: #0056b3; }
-    @media (max-width: 600px) { .support-option { width: 100%; } }
+    /* Basic styles for Support page */
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+    header, footer { background: #333; color: #fff; padding: 10px; text-align: center; }
+    main { padding: 20px; }
+    .faq { margin-top: 20px; }
+    .faq-item { border-bottom: 1px solid #ccc; padding: 10px 0; }
   </style>
 </head>
 <body>
-  <div id="header-placeholder"></div>
-  <div class="container">
-    <h1 id="supportPageTitle">Customer Support</h1>
-    <p class="subtitle" id="supportSubtitle">Welcome to MyBusiness Support. How can we help you today?</p>
-    <div class="support-options">
-      <div class="support-option" onclick="openChat()">
-        <i class="fas fa-comments"></i>
-        <h3>Chat with Supplier</h3>
-        <p>Instantly connect with a supplier for product queries.</p>
-      </div>
-      <div class="support-option" onclick="openOrderTracking()">
-        <i class="fas fa-truck"></i>
-        <h3>Track My Order</h3>
-        <p>Check real-time status and estimated delivery times.</p>
-      </div>
-      <div class="support-option" onclick="openExtraService()">
-        <i class="fas fa-headset"></i>
-        <h3>Live Support</h3>
-        <p>Speak with our customer support team for immediate help.</p>
-      </div>
-    </div>
-    <div class="faq-section">
-      <div class="faq-title">Frequently Asked Questions</div>
-      <div class="faq-item">
-        <div class="faq-question" onclick="toggleFAQ(this)">
-          How do I return an item?
-          <i class="fas fa-chevron-down"></i>
-        </div>
-        <div class="faq-answer">
-          You can request a return via the Order Details page or contact our support. Items must be returned in original packaging within 30 days.
-        </div>
-      </div>
-      <div class="faq-item">
-        <div class="faq-question" onclick="toggleFAQ(this)">
-          How do I change my shipping address?
-          <i class="fas fa-chevron-down"></i>
-        </div>
-        <div class="faq-answer">
-          You can update your shipping address from your Account Settings page.
-        </div>
-      </div>
-    </div>
-    <div class="contact-section">
-      <h2>Contact Us</h2>
-      <div class="contact-form">
-        <label for="contactName">Name</label>
-        <input type="text" id="contactName" placeholder="Your Name">
-        <label for="contactEmail">Email</label>
-        <input type="email" id="contactEmail" placeholder="Your Email">
-        <label for="contactMessage">Message</label>
-        <textarea id="contactMessage" placeholder="Your Message"></textarea>
-        <button onclick="sendContact()">Submit</button>
-      </div>
-    </div>
-  </div>
-  <div id="footer-placeholder"></div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <header id="siteHeader">MyBusiness Premium</header>
+  <main>
+    <h1 id="supportPageTitleElement">Support Default Title</h1>
+    <h3 id="supportSubtitleElement">Default Support Subtitle</h3>
+    <section class="faq" id="faqSection">
+      <!-- FAQ items will be rendered here dynamically -->
+    </section>
+  </main>
+  <footer id="siteFooter">© 2025 MyBusiness. All rights reserved.</footer>
+  
+  <!-- Firebase and Firestore -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
   <script>
@@ -107,26 +41,24 @@
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
-    db.collection("pages").doc("support").get().then(doc => {
+    
+    db.collection("pages").doc("support").onSnapshot((doc) => {
       if(doc.exists) {
         const data = doc.data();
-        if(data.pageTitle) document.getElementById("supportPageTitle").innerText = data.pageTitle;
-        if(data.subtitle) document.getElementById("supportSubtitle").innerText = data.subtitle;
+        document.getElementById("supportPageTitleElement").innerText = data.pageTitle || "Support Default Title";
+        document.getElementById("supportSubtitleElement").innerText = data.subtitle || "Default Support Subtitle";
+        if(data.faqItems && Array.isArray(data.faqItems)) {
+          const faqSection = document.getElementById("faqSection");
+          faqSection.innerHTML = "";
+          data.faqItems.forEach(item => {
+            const div = document.createElement("div");
+            div.classList.add("faq-item");
+            div.innerHTML = `<strong>${item.faqQuestion}</strong><p>${item.faqAnswer}</p>`;
+            faqSection.appendChild(div);
+          });
+        }
       }
-    }).catch(err => console.error("Error loading support data:", err));
-  </script>
-  <script>
-    function toggleFAQ(element) {
-      const answer = element.nextElementSibling;
-      answer.style.display = answer.style.display === "block" ? "none" : "block";
-      const icon = element.querySelector("i");
-      icon.classList.toggle("fa-chevron-down");
-      icon.classList.toggle("fa-chevron-up");
-    }
-    function openChat() { alert("Chat functionality not implemented."); }
-    function openOrderTracking() { alert("Order tracking functionality not implemented."); }
-    function openExtraService() { alert("Live support functionality not implemented."); }
-    function sendContact() { alert("Contact form submitted."); }
+    });
   </script>
 </body>
 </html>
