--- a/public/contact.html
+++ b/public/contact.html
@@ -3,184 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us - YourBrand</title>
-  <!-- External CSS -->
+  <title>Contact Us - MyBusiness Premium</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Font Awesome for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    /* Reset & Base Styles */
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Roboto', sans-serif;
-      background: #fff;
-      color: #333;
-      line-height: 1.6;
-      overflow-x: hidden;
-    }
-    /* Add top margin to account for fixed header */
-    main {
-      max-width: 1000px;
-      margin: 80px auto 40px; /* Added 80px top margin */
-      padding: 20px;
-    }
-    h1, h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    h1 { font-size: 2rem; }
-    h2 { font-size: 1.5rem; color: #4caf50; }
-    /* About Section */
-    .about { margin-bottom: 40px; text-align: center; }
-    .about p { max-width: 800px; margin: 0 auto; font-size: 1rem; color: #666; }
-    /* Contact Info Section */
-    .contact-info {
-      margin-bottom: 40px;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      align-items: center;
-      text-align: center;
-    }
-    .map {
-      width: 100%;
-      height: 300px;
-      border: 0;
-    }
-    .info-item {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 1rem;
-      color: #555;
-    }
-    .info-item a { color: inherit; text-decoration: none; }
-    /* Contact Form Section */
-    .contact-form {
-      background: #f7f7f7;
-      padding: 30px 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      max-width: 600px;
-      margin: 0 auto;
-    }
-    .contact-form form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-    .contact-form label { font-weight: 600; color: #555; }
-    .contact-form input,
-    .contact-form textarea {
-      padding: 12px;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      width: 100%;
-    }
-    .contact-form input:focus,
-    .contact-form textarea:focus { outline: none; border-color: #4caf50; }
-    .contact-form button {
-      padding: 12px;
-      font-size: 1.1rem;
-      background: #4caf50;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .contact-form button:hover { background: #45a049; }
-    /* Responsive Design */
-    @media (max-width: 768px) {
-      main { padding: 15px; margin-top: 80px; }
-      .map { height: 250px; }
-    }
+    /* Basic styles for Contact page */
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+    header, footer { background: #333; color: #fff; padding: 10px; text-align: center; }
+    main { padding: 20px; max-width: 800px; margin: auto; }
+    .contact-info { margin-top: 20px; }
   </style>
 </head>
 <body>
-  <!-- Containers for external header and footer -->
-  <div id="header-placeholder"></div>
-  
+  <header id="siteHeader">MyBusiness Premium</header>
   <main>
-    <h1>Contact Us</h1>
-    <!-- About Section -->
-    <section class="about">
-      <h2>About YourBrand</h2>
-      <p>YourBrand is dedicated to delivering innovative solutions with passion and professionalism. Our team is here to help answer your queries and build lasting relationships with our clients and partners.</p>
-    </section>
-    <!-- Contact Info Section -->
-    <section class="contact-info">
-      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3651.901314824395!2d90.3892023153622!3d23.750903494563154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8586d0e3a39%3A0x4d725845f6eb702b!2sDhaka!5e0!3m2!1sen!2sbd!4v1583489459389!5m2!1sen!2sbd" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-      <div class="info-item">
-        <i class="fas fa-phone-alt"></i>
-        <span>+92 300 1234567</span>
-      </div>
-      <div class="info-item">
-        <i class="fab fa-whatsapp"></i>
-        <a href="https://wa.me/923001234567" target="_blank">WhatsApp: +92 300 1234567</a>
-      </div>
-      <div class="info-item">
-        <i class="fas fa-envelope"></i>
-        <a href="mailto:info@yourbrand.com">info@yourbrand.com</a>
-      </div>
-      <div class="info-item">
-        <i class="fas fa-map-marker-alt"></i>
-        <span>123 Innovation Blvd, Tech City, Country</span>
-      </div>
-    </section>
-    <!-- Contact Form Section -->
-    <section class="contact-form">
-      <h2>Get In Touch</h2>
-      <form id="contactForm" novalidate>
-        <label for="name">Name <span style="color:red;">*</span></label>
-        <input type="text" id="name" name="name" placeholder="Your Name" required>
-        <label for="email">Email <span style="color:red;">*</span></label>
-        <input type="email" id="email" name="email" placeholder="Your Email" required>
-        <label for="phone">Phone</label>
-        <input type="tel" id="phone" name="phone" placeholder="Your Phone Number">
-        <label for="subject">Subject</label>
-        <input type="text" id="subject" name="subject" placeholder="Subject">
-        <label for="message">Message <span style="color:red;">*</span></label>
-        <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
-    </section>
+    <h1 id="contactPageTitleElement">Contact Default Title</h1>
+    <h2 id="contactAboutHeadingElement">Default About Heading</h2>
+    <p id="contactAboutTextElement">Default about text for the contact page.</p>
+    <div class="contact-info">
+      <p id="contactPhoneElement">+1 234 567 890</p>
+      <p id="contactWhatsAppElement">https://wa.me/1234567890</p>
+      <p id="contactEmailElement">info@mybusiness.com</p>
+      <p id="contactAddressElement">Default Address, City, Country</p>
+      <!-- Optionally include a Google Maps embed -->
+      <iframe id="contactMapElement" src="default-map-embed-url" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
   </main>
+  <footer id="siteFooter">© 2025 MyBusiness. All rights reserved.</footer>
   
-  <div id="footer-placeholder"></div>
-  
-  <!-- Custom Loader Function to Insert HTML and Execute Scripts -->
+  <!-- Firebase and Firestore -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
   <script>
-    function loadHTML(url, containerId, callback) {
-      fetch(url)
-        .then(response => response.text())
-        .then(html => {
-          const container = document.getElementById(containerId);
-          container.innerHTML = html;
-          // Extract and run scripts inside the loaded HTML:
-          const scripts = container.querySelectorAll("script");
-          scripts.forEach(oldScript => {
-            const newScript = document.createElement("script");
-            if(oldScript.src) {
-              newScript.src = oldScript.src;
-            } else {
-              newScript.textContent = oldScript.textContent;
-            }
-            document.head.appendChild(newScript);
-          });
-          if (callback) callback();
-        })
-        .catch(err => console.error("Failed to load " + url, err));
-    }
-    // Load header and then initialize hamburger functionality
-    loadHTML("header.html", "header-placeholder", function(){
-      if (typeof initHamburger === "function") {
-        initHamburger();
+    const firebaseConfig = {
+      apiKey: "AIzaSyBq9eDQru5rMMXZjQ4RYHcKSGkcgnnDJFw",
+      authDomain: "e-commerce-pk.firebaseapp.com",
+      projectId: "e-commerce-pk",
+      storageBucket: "e-commerce-pk.firebasestorage.app",
+      messagingSenderId: "126517093225",
+      appId: "1:126517093225:web:c2352620c6d32c582513f8",
+      measurementId: "G-2G2DNCNNT3"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+    
+    db.collection("pages").doc("contact").onSnapshot((doc) => {
+      if(doc.exists) {
+        const data = doc.data();
+        document.getElementById("contactPageTitleElement").innerText = data.pageTitle || "Contact Default Title";
+        document.getElementById("contactAboutHeadingElement").innerText = data.aboutHeading || "Default About Heading";
+        document.getElementById("contactAboutTextElement").innerText = data.aboutText || "Default about text for the contact page.";
+        document.getElementById("contactPhoneElement").innerText = data.phone || "+1 234 567 890";
+        document.getElementById("contactWhatsAppElement").innerText = data.whatsApp || "https://wa.me/1234567890";
+        document.getElementById("contactWhatsAppElement").href = data.whatsApp || "https://wa.me/1234567890";
+        document.getElementById("contactEmailElement").innerText = data.email || "info@mybusiness.com";
+        document.getElementById("contactAddressElement").innerText = data.address || "Default Address, City, Country";
+        document.getElementById("contactMapElement").src = data.mapURL || "default-map-embed-url";
       }
     });
-    // Load footer
-    loadHTML("footer.html", "footer-placeholder");
   </script>
 </body>
 </html>
